--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anna Bella Oficial</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
+
+    <div id="principal">
+
+        <img src="imagem/capa.png" alt="">
+
+        <div id="menu">
+            <a href="index.html">Home</a> |
+            <a href="biografia.html">Biografia</a> |
+            <a href="campanha-publicitarias.html">Campanhas Publicitárias</a> |
+            <a href="contato.html">Contato</a>
+        </div>
+
+        <div id="conteudo">
+
+            <h1>Bem-vindo ao site oficial de Anna Bella!</h1>
+            <p>Aqui você encontrará todas as informações sobre a carreira, biografia e campanhas publicitárias da talentosa atriz Anna Bella. Navegue pelo menu para descobrir mais sobre sua trajetória e trabalhos.</p>
+
+
+        </div>
+
+        <div id="rodape">
+            <h4 class="centralizar">Todos os direitos reservados</h4>
+
+        </div>
+
+    </div>
     
 </body>
+
 </html>
