--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="menu">
             <a href="index.html">Home</a> |
             <a href="biografia.html">Biografia</a> |
-            <a href="campanha-publicitarias.html">Campanhas Publicitárias</a> |
+            <a href="campanha-publicitaria.html">Campanhas Publicitárias</a> |
             <a href="contato.html">Contato</a>
         </div>
 
